--- a/index.html
+++ b/index.html
@@ -174,12 +174,14 @@
             <div class="resume-section-content">
                 <h2 class="mb-5">Projek</h2>
                 <div class="subheading mb-3">Website</div>
-                <div class="d-flex gap-2 flex-wrap">
+                <div class="d-flex gap-3 flex-wrap">
                     <div>
                         <div id="showModalBtn" data-index="profile-dumai" type="button">
-                            <img src="assets/img/project/dumai.jpeg" class="img-thumbnail d-block"
-                                alt="Web Profil Dumai"
-                                style="width:20vw;object-fit: cover;object-position: 100% 0;height: 30vh;">
+                            <div class="d-flex justify-content-center">
+                                <img src="assets/img/project/dumai.jpeg" class="img-thumbnail d-block"
+                                    alt="Web Profil Dumai"
+                                    style="width:20vw;object-fit: cover;object-position: 100% 0;height: 30vh;">
+                            </div>
                             Website Profil RSUD
                             <div class="text-muted">
                                 di Gunakan sebagai informasi RSUD Kota Dumai
@@ -188,8 +190,11 @@
                     </div>
                     <div>
                         <div id="showModalBtn" data-index="sak" type="button">
-                            <img src="assets/img/project/sak.jpeg" class="img-thumbnail d-block" alt="SAK Akreditasi"
-                                style="width:20vw;object-fit: cover;object-position: 100% 0;height: 30vh;">
+                            <div class="d-flex justify-content-center">
+                                <img src="assets/img/project/sak.jpeg" class="img-thumbnail d-block"
+                                    alt="SAK Akreditasi"
+                                    style="width:20vw;object-fit: cover;object-position: 100% 0;height: 30vh;">
+                            </div>
                             SAK (Sistem Akreditasi)
                             <div class="text-muted">
                                 di Gunakan sebagai bantuan untuk Akreditasi Rumah Sakit
@@ -198,77 +203,82 @@
                     </div>
                 </div>
                 <div class="subheading my-3">Android</div>
-                <div class="d-flex gap-3 flex-wrap">
-                    <div>
+                <div class="row">
+                    <div class="col-sm-5 col-md-4 my-2">
                         <div id="showModalBtn" data-index="apo-siak" type="button">
-                            <img src="assets/img/project/apo-siak.webp" class="img-thumbnail d-block" alt="APO SIAK"
-                                style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
-                            Aplikasi Pendaftaran RSUD Siak
-                        </div>
-                    </div>
 
-                    <div>
+                            <img src="assets/img/project/apo-siak.webp" class="img-thumbnail d-block" alt="APO SIAK"
+                                style="width:20vw;object-fit: contain;object-position: center;height: 30vh;">
+                        </div>
+                        Aplikasi Pendaftaran RSUD Siak
+                    </div>
+                    <div class="col-sm-5 col-md-4 my-2">
                         <div id="showModalBtn" data-index="apo-selasih" type="button">
+
                             <img src="assets/img/project/apo-selasih.webp" class="img-thumbnail d-block"
                                 alt="APO Selasih"
-                                style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
-                            Aplikasi Pendaftaran RSUD Selasih
+                                style="width:20vw;object-fit: contain;object-position: center;height: 30vh;">
                         </div>
+                        Aplikasi Pendaftaran RSUD Selasih
                     </div>
-                    <div>
+                    <div class="col-sm-5 col-md-4 my-2">
                         <div id="showModalBtn" data-index="apo-bengkalis" type="button">
+
                             <img src="assets/img/project/apo-bengkalis.webp" class="img-thumbnail d-block"
                                 alt="APO Bengkalis"
-                                style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
-                            Aplikasi Pendaftaran RSUD Bengkalis
+                                style="width:20vw;object-fit: contain;object-position: center;height: 30vh;">
                         </div>
+                        Aplikasi Pendaftaran RSUD Bengkalis
                     </div>
-                    <div>
+                    <div class="col-sm-5 col-md-4 my-2">
                         <div id="showModalBtn" data-index="apo-dumai" type="button">
+
                             <img src="assets/img/project/apo-dumai.webp" class="img-thumbnail d-block" alt="APO Dumai"
-                                style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
-                            Aplikasi Pendaftaran RSUD Dumai
+                                style="width:20vw;object-fit: contain;object-position: center;height: 30vh;">
                         </div>
+                        Aplikasi Pendaftaran RSUD Dumai
                     </div>
-                    <div>
+                    <div class="col-sm-5 col-md-4 my-2">
                         <div id="showModalBtn" data-index="remy-song" type="button">
+
                             <img src="assets/img/project/remy-song.webp" class="img-thumbnail d-block"
                                 alt="Web Profil Dumai"
-                                style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
-                            Remy Song - Karaoke
+                                style="width:20vw;object-fit: contain;object-position: center;height: 30vh;">
                         </div>
+                        Remy Song - Karaoke
                     </div>
-                    <div>
+                    <div class="col-sm-5 col-md-4 my-2">
                         <div id="showModalBtn" data-index="remy-screen" type="button">
+
                             <img src="assets/img/project/remy-screen.webp" class="img-thumbnail d-block"
                                 alt="Remy Screen"
-                                style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
-                            Remy Screen
+                                style="width:20vw;object-fit: contain;object-position: center;height: 30vh;">
                         </div>
+                        Remy Screen
                     </div>
                 </div>
                 <div class="subheading my-3">Permainan</div>
-                <div class="d-flex gap-3 flex-wrap">
-                    <div>
+                <div class="row">
+                    <div class="col-sm-5 col-md-4 my-2">
                         <div id="showModalBtn" data-index="obstacle-snake" type="button">
                             <img src="assets/img/project/obstacle-snake.jpg" class="img-thumbnail d-block"
                                 alt="Obstacle Snake"
-                                style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
+                                style="width:20vw;object-fit: contain;object-position: center;height: 30vh;">
                             Obstacle Snake (Air Console)
                         </div>
                     </div>
-                    <div>
+                    <div class="col-sm-5 col-md-4 my-2">
                         <div id="showModalBtn" data-index="war-plane" type="button">
                             <img src="assets/img/project/war-plane.jpg" class="img-thumbnail d-block" alt="War Plane"
-                                style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
+                                style="width:20vw;object-fit: contain;object-position: center;height: 30vh;">
                             War Plane (Air Console)
                         </div>
                     </div>
-                    <div>
+                    <div class="col-sm-5 col-md-4 my-2">
                         <div id="showModalBtn" data-index="obstacle-adventure" type="button">
                             <img src="assets/img/project/obstacle-adventure.jpg" class="img-thumbnail d-block"
                                 alt="Obstacle Adventure"
-                                style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
+                                style="width:20vw;object-fit: contain;object-position: center;height: 30vh;">
                             Obstacle Adventure (Play Store)
                         </div>
                     </div>
