--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Resume CV</title>
+    <title>Portfolio</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -175,30 +175,36 @@
                 <h2 class="mb-5">Projek</h2>
                 <div class="subheading mb-3">Website</div>
                 <div class="d-flex gap-3 flex-wrap">
-                    <div>
-                        <div id="showModalBtn" data-index="profile-dumai" type="button">
-                            <div class="d-flex justify-content-center">
-                                <img src="assets/img/project/dumai.jpeg" class="img-thumbnail d-block"
-                                    alt="Web Profil Dumai"
-                                    style="width:20vw;object-fit: cover;object-position: 100% 0;height: 30vh;">
-                            </div>
-                            Website Profil RSUD
-                            <div class="text-muted">
-                                di Gunakan sebagai informasi RSUD Kota Dumai
-                            </div>
+                    <div id="showModalBtn" data-index="profile-dumai" type="button">
+                        <div class="d-flex justify-content-center">
+                            <img src="assets/img/project/dumai.jpeg" class="img-thumbnail d-block"
+                                alt="Web Profil Dumai"
+                                style="width:20vw;object-fit: cover;object-position: 100% 0;height: 30vh;">
+                        </div>
+                        Website Profil RSUD
+                        <div class="text-muted">
+                            di Gunakan sebagai informasi RSUD Kota Dumai
                         </div>
                     </div>
-                    <div>
-                        <div id="showModalBtn" data-index="sak" type="button">
-                            <div class="d-flex justify-content-center">
-                                <img src="assets/img/project/sak.jpeg" class="img-thumbnail d-block"
-                                    alt="SAK Akreditasi"
-                                    style="width:20vw;object-fit: cover;object-position: 100% 0;height: 30vh;">
-                            </div>
-                            SAK (Sistem Akreditasi)
-                            <div class="text-muted">
-                                di Gunakan sebagai bantuan untuk Akreditasi Rumah Sakit
-                            </div>
+                    <div id="showModalBtn" data-index="sak" type="button">
+                        <div class="d-flex justify-content-center">
+                            <img src="assets/img/project/sak.jpeg" class="img-thumbnail d-block" alt="SAK Akreditasi"
+                                style="width:20vw;object-fit: cover;object-position: 100% 0;height: 30vh;">
+                        </div>
+                        SAK (Sistem Akreditasi)
+                        <div class="text-muted">
+                            di Gunakan sebagai bantuan untuk Akreditasi Rumah Sakit
+                        </div>
+                    </div>
+                    <div id="showModalBtn" data-index="ikjr" type="button">
+                        <div class="d-flex justify-content-center">
+                            <img src="assets/img/project/ikjr.jpeg" class="img-thumbnail d-block"
+                                alt="Ikatan Keluarga Jawa Riau"
+                                style="width:20vw;object-fit: cover;object-position: 100% 0;height: 30vh;">
+                        </div>
+                        IKJR (Ikatan Keluarga Jawa Riau)
+                        <div class="text-muted">
+                            di Gunakan untuk mencetak kartu anggota
                         </div>
                     </div>
                 </div>
