--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                         <li class="list-group-item fs-3"><i class="fa fa-file-lines"></i> Visual Studio Code</li>
                         <li class="list-group-item fs-3"><i class="fa fa-server"></i> XAMPP</li>
                         <li class="list-group-item fs-3"><i class="fa-brands fa-unity"></i> UNITY</li>
+                        <li class="list-group-item fs-3"><i class="fa-brands fa-github"></i> Github</li>
                     </ul>
                     <ul class="list-group dev-icons">
                         <li class="list-group-item fs-3"><i class="fa-brands fa-android"></i> Android Studio</li>
@@ -193,20 +194,21 @@
                         </div>
                         SAK (Sistem Akreditasi)
                         <div class="text-muted">
-                            di Gunakan sebagai bantuan untuk Akreditasi Rumah Sakit
+                            di Gunakan sebagai bantuan untuk Akreditasi Rumah Sakit dan terhubung ke API Pilar RSUD
                         </div>
                     </div>
                     <div id="showModalBtn" data-index="ikjr" type="button">
                         <div class="d-flex justify-content-center">
                             <img src="assets/img/project/ikjr.jpeg" class="img-thumbnail d-block"
                                 alt="Ikatan Keluarga Jawa Riau"
-                                style="width:20vw;object-fit: cover;object-position: 100% 0;height: 30vh;">
+                                style="width:20vw;object-fit: cover;object-position:center;height: 30vh;">
                         </div>
                         IKJR (Ikatan Keluarga Jawa Riau)
                         <div class="text-muted">
                             di Gunakan untuk mencetak kartu anggota
                         </div>
                     </div>
+
                 </div>
                 <div class="subheading my-3">Android</div>
                 <div class="row">
