--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
         <section class="resume-section" id="interests">
             <div class="resume-section-content">
                 <h2 class="mb-5">Projek</h2>
+                <div class="my-3">Berikut saya tampilkan beberapa projek yang pernah dibuat :</div>
                 <div class="subheading mb-3">Website</div>
                 <div class="d-flex gap-3 flex-wrap">
                     <div id="showModalBtn" data-index="profile-dumai" type="button">
