--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
                 <div class="subheading mb-5">
                     Perawang Kab Siak Kota Pekanbaru
                 </div>
-                <p class="lead mb-5"> </p>
+                <p class="lead mb-5">
+                    Tertarik dengan pemograman khususnya pemograman Website.
+                </p>
                 <div class="d-flex flex-wrap social-icons gap-3">
                     <a class="social-icon" href="https://github.com/TerraEdition" target="_blank"><i
                             class="fab fa-github"></i></a>
@@ -127,22 +129,26 @@
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
                 <h2 class="mb-5">Keahlian</h2>
-                <div class="d-flex gap-4 flex-wrap">
+                <div class="d-flex flex-wrap gap-3">
                     <div class="">
                         <div class="subheading mb-3">Pemograman</div>
-                        <div class="d-flex flex-wrap">
-                            <ul class="list-group dev-icons">
-                                <li class="list-group-item fs-3"><i class="fab fa-html5"></i> HTML</li>
-                                <li class="list-group-item fs-3"><i class="fab fa-css3-alt"></i> CSS</li>
-                                <li class="list-group-item fs-3"><i class="fab fa-js-square"></i> Javascript</li>
-                                <li class="list-group-item fs-3"><i class="fab fa-php"></i> PHP</li>
-                            </ul>
-                            <ul class="list-group dev-icons">
-                                <li class="list-group-item fs-3"><i class="fa fa-c"></i> C# (Unity)</li>
-                                <li class="list-group-item fs-3"><i class="fab fa-python"></i> Phyton</li>
-                                <li class="list-group-item fs-3"><i class="fab fa-java"></i> Java</li>
-                            </ul>
-                        </div>
+                        <ul class="list-group dev-icons">
+                            <li class="list-group-item fs-3"><i class="fab fa-html5"></i> HTML</li>
+                            <li class="list-group-item fs-3"><i class="fab fa-css3-alt"></i> CSS</li>
+                            <li class="list-group-item fs-3"><i class="fab fa-js-square"></i> Javascript</li>
+                            <li class="list-group-item fs-3"><i class="fab fa-php"></i> PHP</li>
+                            <li class="list-group-item fs-3"><i class="fa fa-c"></i> C# (Unity)</li>
+                            <li class="list-group-item fs-3"><i class="fab fa-java"></i> Kotlin/Java</li>
+                        </ul>
+                    </div>
+                    <div class="">
+                        <div class="subheading mb-3">Framework</div>
+                        <ul class="list-group dev-icons">
+                            <li class="list-group-item fs-3"><img src="assets/img/ci.svg" style="height:1em" />
+                                Codeigniter</li>
+                            <li class="list-group-item fs-3"> <i class="fa-brands fa-laravel"></i> Laravel</li>
+                            <li class="list-group-item fs-3"> <i class="fa-brands fa-react"></i> React JS</li>
+                        </ul>
                     </div>
                     <div class="">
                         <div class="subheading mb-3">Database</div>
@@ -153,6 +159,7 @@
                         </ul>
                     </div>
                 </div>
+
                 <div class="subheading my-3">Aplikasi yang di Gunakan</div>
                 <div class="d-flex gap-3">
                     <ul class="list-group dev-icons">
@@ -167,7 +174,6 @@
                         <li class="list-group-item fs-3"><i class="fa fa-video"></i> Cyberlink Power Director</li>
                     </ul>
                 </div>
-            </div>
         </section>
         <hr class="m-0" />
         <!-- Interests-->
