--- a/index.html
+++ b/index.html
@@ -77,18 +77,18 @@
         <section class="resume-section" id="experience">
             <div class="resume-section-content">
                 <h2 class="mb-5">Pengalaman</h2>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5 mb-3">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Web Development</h3>
-                        <div class="subheading mb-3">Freelance</div>
+                        <div class="subheading">Freelance</div>
                         <p></p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">Februari 2019 - 2022</span></div>
                 </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5 mb-3">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Web Developer</h3>
-                        <div class="subheading mb-3">CV. Persamnas</div>
+                        <div class="subheading">CV. Persamnas</div>
                         <p></p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">September 2016 - Februari 2019</span>
@@ -101,24 +101,24 @@
         <section class="resume-section" id="education">
             <div class="resume-section-content">
                 <h2 class="mb-5">Education</h2>
-                <div class="d-flex flex-column flex-md-row justify-content-between">
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Sekolah Dasar</h3>
-                        <div class="subheading mb-3">Yayasan Pendidikan Persada Indah</div>
+                        <div class="subheading">Yayasan Pendidikan Persada Indah</div>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">Selesai 2010</span></div>
                 </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between">
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Sekolah Menengah Pertama</h3>
-                        <div class="subheading mb-3">Yayasan Pendidikan Persada Indah</div>
+                        <div class="subheading">Yayasan Pendidikan Persada Indah</div>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">Selesai 2013</span></div>
                 </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between">
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Sekolah Menengah Kejuruan ( TKJ )</h3>
-                        <div class="subheading mb-3">Yayasan Pendidikan Persada Indah</div>
+                        <div class="subheading">Yayasan Pendidikan Persada Indah</div>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">Selesai 2016</span></div>
                 </div>
