--- a/index.html
+++ b/index.html
@@ -230,6 +230,20 @@
                             </div>
                         </div>
                     </div>
+                    <div style="width:25vw">
+                        <div id="showModalBtn" data-index="server" type="button">
+                            <div class="d-flex justify-content-center">
+                                <img src="assets/img/project/server.jpeg" class="img-thumbnail d-block"
+                                    alt="Ikatan Keluarga Jawa Riau"
+                                    style="width:20vw;object-fit: cover;object-position:center;height: 30vh;">
+                            </div>
+                            Aplikasi Transaksi Pembelian dan Penjualan
+                            <div class="text-muted">
+                                di Gunakan untuk mencatat transaksi pembelian dan penjualan, serta juga tersedia API
+                                penjualan jika dilakukan di Aplikasi Lain.
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="subheading my-3">Android</div>
                 <div class="row">
