--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                             Aplikasi Transaksi Pembelian dan Penjualan
                             <div class="text-muted">
                                 di Gunakan untuk mencatat transaksi pembelian dan penjualan, serta juga tersedia API
-                                penjualan jika dilakukan di Aplikasi Lain.
+                                penjualan untuk terhubung 3rd party software.
                             </div>
                         </div>
                     </div>
