--- a/index.html
+++ b/index.html
@@ -233,14 +233,28 @@
                     <div style="width:25vw">
                         <div id="showModalBtn" data-index="server" type="button">
                             <div class="d-flex justify-content-center">
-                                <img src="assets/img/project/server.jpeg" class="img-thumbnail d-block"
-                                    alt="Ikatan Keluarga Jawa Riau"
+                                <img src="assets/img/project/server.jpeg" class="img-thumbnail d-block" alt="Server"
                                     style="width:20vw;object-fit: cover;object-position:center;height: 30vh;">
                             </div>
-                            Aplikasi Transaksi Pembelian dan Penjualan
+                            Aplikasi Transaksi Pembelian dan Penjualan (Pusat)
                             <div class="text-muted">
                                 di Gunakan untuk mencatat transaksi pembelian dan penjualan, serta juga tersedia API
                                 penjualan untuk terhubung 3rd party software.
+                            </div>
+                        </div>
+                    </div>
+                    <div style="width:25vw">
+                        <div id="showModalBtn" data-index="cabang" type="button">
+                            <div class="d-flex justify-content-center">
+                                <img src="assets/img/project/cabang.jpeg" class="img-thumbnail d-block"
+                                    alt="Ikatan Keluarga Jawa Riau"
+                                    style="width:20vw;object-fit: cover;object-position:center;height: 30vh;">
+                            </div>
+                            Aplikasi Remy Song (Cabang)
+                            <div class="text-muted">
+                                di Gunakan untuk memanajemen transaksi penjualan seperti toko online, serta aplikasi ini
+                                juga terhubung ke Aplikasi Transaksi Pembelian dan Penjualan (Aplikasi Pusat)
+                                melalui Rest API.
                             </div>
                         </div>
                     </div>
