--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                                     alt="Ikatan Keluarga Jawa Riau"
                                     style="width:20vw;object-fit: cover;object-position:center;height: 30vh;">
                             </div>
-                            Aplikasi Remy Song (Cabang)
+                            Aplikasi Remy Song (3rd Party Software / Cabang)
                             <div class="text-muted">
                                 di Gunakan untuk memanajemen transaksi penjualan seperti toko online, serta aplikasi ini
                                 juga terhubung ke Aplikasi Transaksi Pembelian dan Penjualan (Aplikasi Pusat)
