--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
     <!-- modal -->
     <!-- Modal -->
     <div class="modal fade" id="showModal" tabindex="-1">
-        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-fullscreen">
+        <div class="modal-dialog modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="showModalLabel">Detail</h1>
