--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                     Perawang Kab Siak Kota Pekanbaru
                 </div>
                 <p class="lead mb-5">
-                    Tertarik dengan pemograman khususnya pemograman Website.
+                    Sejak tahun 2016 berkarir di Web Development, dan menjadi tertarik dengan pemograman khususnya
+                    pemograman Website.
                 </p>
                 <div class="d-flex flex-wrap social-icons gap-3">
                     <a class="social-icon" href="https://github.com/TerraEdition" target="_blank"><i
@@ -191,12 +192,12 @@
                 <div class="my-3">Berikut saya tampilkan beberapa projek yang pernah dibuat :</div>
                 <div class="subheading mb-3">Website</div>
                 <div class="d-flex gap-3 flex-wrap">
-                    <div style="width:25vw">
+                    <div style="width:250px">
                         <div id="showModalBtn" data-index="profile-dumai" type="button">
                             <div class="d-flex justify-content-center">
                                 <img src="assets/img/project/dumai.jpeg" class="img-thumbnail d-block"
                                     alt="Web Profil Dumai"
-                                    style="width:20vw;object-fit: cover;object-position: 100% 0;height: 30vh;">
+                                    style="min-width:20vw;max-width: 200px;object-fit: cover;object-position: 100% 0;height: 30vh;">
                             </div>
                             Website Profil RSUD
                             <div class="text-muted">
@@ -204,12 +205,12 @@
                             </div>
                         </div>
                     </div>
-                    <div style="width:25vw">
+                    <div style="width:250px">
                         <div id="showModalBtn" data-index="sak" type="button">
                             <div class="d-flex justify-content-center">
                                 <img src="assets/img/project/sak.jpeg" class="img-thumbnail d-block"
                                     alt="SAK Akreditasi"
-                                    style="width:20vw;object-fit: cover;object-position: 100% 0;height: 30vh;">
+                                    style="min-width:20vw;max-width: 200px;object-fit: cover;object-position: 100% 0;height: 30vh;">
                             </div>
                             SAK (Sistem Akreditasi)
                             <div class="text-muted">
@@ -217,12 +218,12 @@
                             </div>
                         </div>
                     </div>
-                    <div style="width:25vw">
+                    <div style="width:250px">
                         <div id="showModalBtn" data-index="ikjr" type="button">
                             <div class="d-flex justify-content-center">
                                 <img src="assets/img/project/ikjr.jpeg" class="img-thumbnail d-block"
                                     alt="Ikatan Keluarga Jawa Riau"
-                                    style="width:20vw;object-fit: cover;object-position:center;height: 30vh;">
+                                    style="min-width:20vw;max-width: 200px;object-fit: cover;object-position:center;height: 30vh;">
                             </div>
                             IKJR (Ikatan Keluarga Jawa Riau)
                             <div class="text-muted">
@@ -230,11 +231,11 @@
                             </div>
                         </div>
                     </div>
-                    <div style="width:25vw">
+                    <div style="width:250px">
                         <div id="showModalBtn" data-index="server" type="button">
                             <div class="d-flex justify-content-center">
                                 <img src="assets/img/project/server.jpeg" class="img-thumbnail d-block" alt="Server"
-                                    style="width:20vw;object-fit: cover;object-position:center;height: 30vh;">
+                                    style="min-width:20vw;max-width: 200px;object-fit: cover;object-position:center;height: 30vh;">
                             </div>
                             Aplikasi Transaksi Pembelian dan Penjualan (Pusat)
                             <div class="text-muted">
@@ -243,12 +244,12 @@
                             </div>
                         </div>
                     </div>
-                    <div style="width:25vw">
+                    <div style="width:250px">
                         <div id="showModalBtn" data-index="cabang" type="button">
                             <div class="d-flex justify-content-center">
                                 <img src="assets/img/project/cabang.jpeg" class="img-thumbnail d-block"
                                     alt="Ikatan Keluarga Jawa Riau"
-                                    style="width:20vw;object-fit: cover;object-position:center;height: 30vh;">
+                                    style="min-width:20vw;max-width: 200px;object-fit: cover;object-position:center;height: 30vh;">
                             </div>
                             Aplikasi Remy Song (3rd Party Software / Cabang)
                             <div class="text-muted">
@@ -265,7 +266,7 @@
                         <div id="showModalBtn" data-index="apo-siak" type="button">
 
                             <img src="assets/img/project/apo-siak.webp" class="img-thumbnail d-block" alt="APO SIAK"
-                                style="width:20vw;object-fit: contain;object-position: center;height: 30vh;">
+                                style="min-width:20vw;max-width: 200px;object-fit: contain;object-position: center;height: 30vh;">
                         </div>
                         Aplikasi Pendaftaran RSUD Siak
                     </div>
@@ -274,7 +275,7 @@
 
                             <img src="assets/img/project/apo-selasih.webp" class="img-thumbnail d-block"
                                 alt="APO Selasih"
-                                style="width:20vw;object-fit: contain;object-position: center;height: 30vh;">
+                                style="min-width:20vw;max-width: 200px;object-fit: contain;object-position: center;height: 30vh;">
                         </div>
                         Aplikasi Pendaftaran RSUD Selasih
                     </div>
@@ -283,7 +284,7 @@
 
                             <img src="assets/img/project/apo-bengkalis.webp" class="img-thumbnail d-block"
                                 alt="APO Bengkalis"
-                                style="width:20vw;object-fit: contain;object-position: center;height: 30vh;">
+                                style="min-width:20vw;max-width: 200px;object-fit: contain;object-position: center;height: 30vh;">
                         </div>
                         Aplikasi Pendaftaran RSUD Bengkalis
                     </div>
@@ -291,7 +292,7 @@
                         <div id="showModalBtn" data-index="apo-dumai" type="button">
 
                             <img src="assets/img/project/apo-dumai.webp" class="img-thumbnail d-block" alt="APO Dumai"
-                                style="width:20vw;object-fit: contain;object-position: center;height: 30vh;">
+                                style="min-width:20vw;max-width: 200px;object-fit: contain;object-position: center;height: 30vh;">
                         </div>
                         Aplikasi Pendaftaran RSUD Dumai
                     </div>
@@ -300,7 +301,7 @@
 
                             <img src="assets/img/project/remy-song.webp" class="img-thumbnail d-block"
                                 alt="Web Profil Dumai"
-                                style="width:20vw;object-fit: contain;object-position: center;height: 30vh;">
+                                style="min-width:20vw;max-width: 200px;object-fit: contain;object-position: center;height: 30vh;">
                         </div>
                         Remy Song - Karaoke
                     </div>
@@ -309,7 +310,7 @@
 
                             <img src="assets/img/project/remy-screen.webp" class="img-thumbnail d-block"
                                 alt="Remy Screen"
-                                style="width:20vw;object-fit: contain;object-position: center;height: 30vh;">
+                                style="min-width:20vw;max-width: 200px;object-fit: contain;object-position: center;height: 30vh;">
                         </div>
                         Remy Screen
                     </div>
@@ -320,14 +321,14 @@
                         <div id="showModalBtn" data-index="obstacle-snake" type="button">
                             <img src="assets/img/project/obstacle-snake.jpg" class="img-thumbnail d-block"
                                 alt="Obstacle Snake"
-                                style="width:20vw;object-fit: contain;object-position: center;height: 30vh;">
+                                style="min-width:20vw;max-width: 200px;object-fit: contain;object-position: center;height: 30vh;">
                             Obstacle Snake (Air Console)
                         </div>
                     </div>
                     <div class="col-sm-5 col-md-4 my-2">
                         <div id="showModalBtn" data-index="war-plane" type="button">
                             <img src="assets/img/project/war-plane.jpg" class="img-thumbnail d-block" alt="War Plane"
-                                style="width:20vw;object-fit: contain;object-position: center;height: 30vh;">
+                                style="min-width:20vw;max-width: 200px;object-fit: contain;object-position: center;height: 30vh;">
                             War Plane (Air Console)
                         </div>
                     </div>
@@ -335,7 +336,7 @@
                         <div id="showModalBtn" data-index="obstacle-adventure" type="button">
                             <img src="assets/img/project/obstacle-adventure.jpg" class="img-thumbnail d-block"
                                 alt="Obstacle Adventure"
-                                style="width:20vw;object-fit: contain;object-position: center;height: 30vh;">
+                                style="min-width:20vw;max-width: 200px;object-fit: contain;object-position: center;height: 30vh;">
                             Obstacle Adventure (Play Store)
                         </div>
                     </div>
