--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <p class="lead mb-5">
                     Sejak tahun 2016 berkarir di Web Development, dan menjadi tertarik dengan pemograman khususnya
-                    pemograman Website.
+                    Pemograman Website.
                 </p>
                 <div class="d-flex flex-wrap social-icons gap-3">
                     <a class="social-icon" href="https://github.com/TerraEdition" target="_blank"><i
@@ -201,7 +201,7 @@
                             </div>
                             Website Profil RSUD
                             <div class="text-muted">
-                                di Gunakan sebagai informasi RSUD Kota Dumai
+                                di Gunakan sebagai informasi RSUD Kota Dumai.
                             </div>
                         </div>
                     </div>
@@ -214,7 +214,7 @@
                             </div>
                             SAK (Sistem Akreditasi)
                             <div class="text-muted">
-                                di Gunakan sebagai bantuan untuk Akreditasi Rumah Sakit dan terhubung ke API Pilar RSUD
+                                di Gunakan sebagai bantuan untuk Akreditasi Rumah Sakit dan terhubung ke API Pilar RSUD.
                             </div>
                         </div>
                     </div>
