--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
                 </div>
                 <p class="lead mb-5">
                     Sejak tahun 2016 berkarir di Web Development, dan menjadi tertarik dengan pemograman khususnya
-                    Pemograman Website.
+                    Pemograman Website.<br />
+                    Suka dengan tantangan, ingin belajar hal baru dan berkembang, serta dapat bekerja bersama tim atau
+                    mandiri.
                 </p>
                 <div class="d-flex flex-wrap social-icons gap-3">
                     <a class="social-icon" href="https://github.com/TerraEdition" target="_blank"><i
