--- a/index.html
+++ b/index.html
@@ -110,8 +110,20 @@
                 <h2 class="mb-5">Pengalaman</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5 mb-3">
                     <div class="flex-grow-1">
+                        <h3 class="mb-0">Backend Developer</h3>
+                        <div class="subheading">PT. Arca International</div>
+<!--                         <span id="showModalBtn" data-index="cv-persamnas-job" type="button"
+                            class="btn btn-outline-primary">
+                            Detail
+                        </span> -->
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">January 2023 - Sekarang</span>
+                    </div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5 mb-3">
+                    <div class="flex-grow-1">
                         <h3 class="mb-0">Web Development</h3>
-                        <div class="subheading">Freelance
+                        <div class="subheading">CV. Pilar Partner Aneka Media
                         </div>
                         <span id="showModalBtn" data-index="freelance-job" type="button"
                             class="btn btn-outline-primary">
